[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lean4check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.6.0",
    "mcp[cli]>=1.2.0",
]

[project.scripts]
lean4check = "lean4check.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
